--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@400;700&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <title>Tyrion Meredith | Business Card</title>
   </head>
   <body>
     <div class="card">
