--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   </head>
   <body>
     <div class="card">
-      <img class="avatar" src="images/tyrion.jpg" />
+      <img
+        class="avatar"
+        src="images/tyrion.jpg"
+        alt="Tyrion Meredith smiling"
+      />
+
       <div>
         <h3>Tyrion Rose Meredith</h3>
         <p>Frontend Developer</p>
